Added router angular

--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,7 @@
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 <body>
-  <app-login></app-login>
+  <!--Never update the app-root -->
+  <app-root></app-root>
 </body>
 </html>
